--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@api/neynar": "file:.api/apis/neynar",
     "@auth/prisma-adapter": "^1.4.0",
+    "@farcaster/hub-nodejs": "^0.11.10",
     "@prisma/client": "^5.10.2",
     "@t3-oss/env-nextjs": "^0.10.1",
     "frames.js": "^0.14.0",
