--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
-DATABASE_URL="postgresql://postgres:password@localhost:5432/dare-app"
-NEXTAUTH_URL="http://localhost:3000"
+DATABASE_URL=""
+NEXTAUTH_SECRET=""
+NEXTAUTH_URL=""
 DISCORD_CLIENT_ID=""
 DISCORD_CLIENT_SECRET=""
+HUB_GRPC_URL=""
+NEYNAR_API_KEY=""
+NEXT_PUBLIC_HOST_URL="localhost:3000"
